[package]
name = "libsql-storage"
version = "0.0.1"
edition = "2021"
description = "libSQL WAL"
repository = "https://github.com/tursodatabase/libsql"
license = "MIT"

[dependencies]
libsql-sys = { path = "../libsql-sys", features = ["rusqlite"] }
sieve-cache = "0.1.4"
tokio = { version = "1.22.2", features = ["rt-multi-thread", "net", "io-std", "io-util", "time", "macros", "sync", "fs"] }
tracing = { version = "0.1.37", default-features = false }
uuid = { version = "1.7.0", features = ["v4"] }
log = "0.4.20"
parking_lot = "0.12.1"
prost = "0.12"
tonic = { version = "0.10", features = ["tls"] }

[dev-dependencies]
prost-build = "0.12"
tonic-build = "0.10"
