[package]
name = "sqld-libsql-bindings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
rusqlite = { workspace = true, features = ["trace"] }
tracing = "0.1.37"
once_cell = "1.17.1"

[features]
unix-excl-vfs = []
