[package]
name = "libsql-sys"
version = "0.5.0"
edition = "2021"
license = "MIT"
description = "Native bindings to libSQL"
repository = "https://github.com/tursodatabase/libsql"
keywords = ["libsql", "sqlite", "ffi", "bindings", "database"]
categories = ["external-ffi-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
libsql-ffi = { version = "0.2", path = "../libsql-ffi/" }
once_cell = "1.18.0"
rusqlite = { workspace = true, features = ["trace"], optional = true }
tracing = "0.1.37"
zerocopy = { version = "0.7.28", features = ["derive"] }

[features]
default = ["api"]
api = ["wal"]
wal = []
rusqlite = ["dep:rusqlite"]
wasmtime-bindings = ["libsql-ffi/wasmtime-bindings"]
unix-excl-vfs = []
encryption = ["libsql-ffi/multiple-ciphers"]

