[package]
name = "libsql-sys"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Native bindings to libSQL"
keywords = ["libsql", "sqlite", "ffi", "bindings", "database"]
categories = ["external-ffi-bindings"]

[dependencies]
bytes = "1.5.0"
libsql-ffi = { workspace = true }
once_cell = "1.18.0"
rusqlite = { workspace = true, features = ["trace"], optional = true }
tracing = "0.1.37"
zerocopy = { version = "0.7.28", features = ["derive"] }

[features]
default = ["api"]
api = ["wal"]
wal = []
rusqlite = ["dep:rusqlite"]
wasmtime-bindings = ["libsql-ffi/wasmtime-bindings"]
unix-excl-vfs = []
encryption = ["libsql-ffi/multiple-ciphers"]
sqlean-extension-uuid = ["libsql-ffi/sqlean-extension-uuid"]
sqlean-extension-crypto = ["libsql-ffi/sqlean-extension-crypto"]
sqlean-extension-fuzzy = ["libsql-ffi/sqlean-extension-fuzzy"]
sqlean-extension-math = ["libsql-ffi/sqlean-extension-math"]
sqlean-extension-stats = ["libsql-ffi/sqlean-extension-stats"]
sqlean-extension-text = ["libsql-ffi/sqlean-extension-text"]
sqlean-extension-regexp = ["libsql-ffi/sqlean-extension-regexp"]
sqlean-extensions = ["libsql-ffi/sqlean-extensions"]
