[package]
name = "libsql-wal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.7.1"
async-stream = "0.3.5"
bytes = "1.6.0"
chrono = "0.4.38"
crc32fast = "1.4.2"
crossbeam = "0.8.4"
fst = "0.4.7"
hashbrown = "0.14.3"
libsql-sys = { path = "../libsql-sys", features = ["rusqlite"] }
nix = { version = "0.28.0", features = ["uio", "fs"] }
parking_lot = "0.12.1"
priority-queue = "2.0.2"
tempfile = "3.10.1"
thiserror = "1.0.58"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.15"
tracing = "0.1.40"
uuid = { version = "1.8.0", features = ["v4"] }
walkdir = "2.5.0"
zerocopy = { version = "0.7.32", features = ["derive", "alloc"] }

[dev-dependencies]
criterion = "0.5.1"
hex = "0.4.3"
insta = "1.39.0"
once_cell = "1.19.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
regex = "1.10.4"
