[package]
name = "libsql-wal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.7.1"
async-stream = "0.3.5"
bitflags = "2.5.0"
bytes = "1.6.0"
chrono = "0.4.38"
crc32fast = "1.4.2"
crossbeam = "0.8.4"
crossbeam-skiplist = "0.1.3"
fst = "0.4.7"
hashbrown = "0.14.3"
libsql-sys = { path = "../libsql-sys", features = ["rusqlite"] }
nix = { version = "0.28.0", features = ["uio", "fs"] }
parking_lot = { version = "0.12.3", features = ["arc_lock"] }
priority-queue = "2.0.2"
roaring = "0.10.5"
tempfile = "3.10.1"
thiserror = "1.0.58"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.15"
tracing = "0.1.40"
uuid = { version = "1.8.0", features = ["v4"] }
walkdir = "2.5.0"
zerocopy = { version = "0.7.32", features = ["derive", "alloc"] }

aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"

[dev-dependencies]
criterion = "0.5.1"
hex = "0.4.3"
insta = "1.39.0"
once_cell = "1.19.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
regex = "1.10.4"
s3s = { git = "https://github.com/Nugine/s3s" }
s3s-fs = { git = "https://github.com/Nugine/s3s" }
s3s-aws = { git = "https://github.com/Nugine/s3s" }
tracing-subscriber = "0.3"
aws-credential-types = { version = "1", features = ["test-util"] }
tokio = { version = "*", features = ["test-util"] }

[[bench]]
name = "benchmarks"
harness = false
