[package]
name = "libsql-wal"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.7.1"
async-stream = "0.3.5"
async-lock = "3.4.0"
bitflags = "2.5.0"
bytes = "1.6.0"
chrono = "0.4.38"
crc32fast = "1.4.2"
crossbeam = "0.8.4"
crossbeam-skiplist = "0.1.3"
fst = "0.4.7"
hashbrown = "0.14.3"
libsql-sys = { path = "../libsql-sys", features = ["rusqlite"] }
nix = { version = "0.28.0", features = ["uio", "fs"] }
parking_lot = { version = "0.12.3", features = ["arc_lock"] }
priority-queue = "2.0.2"
roaring = "0.10.5"
tempfile = "3.10.1"
thiserror = "1.0.58"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.15"
tracing = "0.1.40"
uuid = { version = "1.8.0", features = ["v4"] }
walkdir = "2.5.0"
zerocopy = { workspace = true }

aws-config = { version = "1", optional = true, features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1", optional = true }
http-body = "1.0.0"
tokio-util = "0.7.11"
hyper = { workspace = true, optional = true, features = ["client", "http2"] }
aws-smithy-runtime = { version = "1.6.2", optional = true, features = ["connector-hyper-0-14-x", "client"]}
clap = { version = "4.5.9", optional = true, features = ["derive"] }
inquire = { version = "0.7.5", optional = true }
tracing-subscriber = { version = "0.3.18", optional = true }
aws-credential-types = { version = "1.2.0", optional = true }
dashmap = "6.0.1"
rand = "0.8.5"
aws-smithy-types-convert = { version = "0.60.8", features = ["convert-chrono"] }
petgraph = "0.6.5"
anyhow = { version = "1.0.86", optional = true }

[dev-dependencies]
criterion = "0.5.1"
hex = "0.4.3"
insta = "1.39.0"
once_cell = "1.19.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
regex = "1.10.4"
s3s = { git = "https://github.com/Nugine/s3s" }
s3s-fs = { git = "https://github.com/Nugine/s3s" }
s3s-aws = { git = "https://github.com/Nugine/s3s" }
tracing-subscriber = "0.3"
aws-credential-types = { version = "1", features = ["test-util"] }
tokio = { version = "*", features = ["test-util"] }

[[bench]]
name = "benchmarks"
harness = false

[features]
default = ["s3"]
s3 = [
    "dep:hyper",
    "dep:aws-smithy-runtime",
    "dep:aws-sdk-s3",
    "dep:aws-config",
    "dep:aws-credential-types",
]
