[package]
name = "libsql"
version = "0.1.11"
edition = "2021"
description = "libSQL library: the main gateway for interacting with the database"
repository = "https://github.com/libsql/libsql"
license = "MIT"

[dependencies]
futures = { version = "0.3.28", optional = true }
libsql-sys = { version = "0.2.13", path = "../libsql-sys", optional = true }
thiserror = "1.0.40"
tokio = { version = "1.29.1", features = ["fs", "sync"], optional = true }
tracing = "0.1.37"
parking_lot = { version = "0.12.1", optional = true }
hyper = { version = "0.14", features = ["client"], optional = true }
hyper-rustls = { version = "0.24", features = ["webpki-roots"], optional = true }
base64 = { version = "0.21", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
async-trait = "0.1"
bitflags = { version = "2.4.0", optional = true }
tower = { version = "0.4", features = ["util"], optional = true }

bincode = { version = "1", optional = true }
anyhow = { version = "1.0.71", optional = true }
bytemuck = { version = "1.13.1", features = ["derive"], optional = true }
bytes = { version = "1.4.0", features = ["serde"], optional = true }
uuid = { version = "1.4.0", features = ["v4", "serde"], optional = true }
tokio-stream = { version = "0.1.14", optional = true }
tonic = { version = "0.10.2", features = ["tls", "tls-roots", "tls-webpki-roots"], optional = true}
tonic-web = { version = "0.10.2" , optional = true }
tower-http = { version = "0.4.4", features = ["trace", "util"], optional = true }
http = { version = "0.2", optional = true }

sqlite3-parser = { path = "../vendored/sqlite3-parser", version = "0.11", optional = true }
fallible-iterator = { version = "0.3", optional = true }

libsql-replication = { path = "../libsql-replication" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async", "async_futures", "async_tokio"] }
pprof = { version = "0.12.1", features = ["criterion", "flamegraph"] }
tokio = { version = "1.29.1", features = ["full"] }
tokio-test = "0.4"
tracing-subscriber = "0.3"
tempfile = { version = "3.7.0" }

tonic-build = "0.10"
prost-build = "0.12"


[features]
default = ["core", "replication", "hrana"]
core = [
  "libsql-sys",
  "dep:bitflags",
  "dep:futures"
]
replication = [
  "core",
  "serde",
  "http",
  "dep:anyhow",
  "dep:bincode",
  "dep:bytemuck",
  "dep:bytes",
  "dep:fallible-iterator",
  "dep:uuid",
  "dep:tokio-stream",
  "dep:sqlite3-parser",
  "dep:parking_lot",
  "dep:tokio",
  "dep:tonic",
  "dep:tonic-web",
  "dep:tower-http",
  "dep:tower",
  "dep:hyper-rustls",
  "dep:futures"
]
hrana = [
  "serde",
  "http",
  "dep:base64",
  "dep:serde_json",
  "dep:tower",
  "dep:hyper-rustls"
]
serde = ["dep:serde"]
http = ["dep:tower", "dep:hyper", "dep:http", "dep:tokio"]

[[bench]]
name = "benchmark"
harness = false
