[package]
name = "libsql"
version = "0.1.11"
edition = "2021"
description = "libSQL library: the main gateway for interacting with the database"
repository = "https://github.com/libsql/libsql"
license = "MIT"

[dependencies]
tracing = { version = "0.1.37", default-features = false }
thiserror = "1.0.40"

futures = { version = "0.3.28", optional = true }
libsql-sys = { version = "0.2.13", path = "../libsql-sys", optional = true }
tokio = { version = "1.29.1", features = ["fs", "sync"], optional = true }
parking_lot = { version = "0.12.1", optional = true }
hyper = { version = "0.14", features = ["client"], optional = true }
hyper-rustls = { version = "0.24", features = ["webpki-roots"], optional = true }
base64 = { version = "0.21", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
async-trait = "0.1"
bitflags = { version = "2.4.0", optional = true }
tower = { version = "0.4", features = ["util"], optional = true }
worker = { version = "0.0.18", optional = true }

bincode = { version = "1", optional = true }
anyhow = { version = "1.0.71", optional = true }
bytemuck = { version = "1.13.1", features = ["derive"], optional = true }
bytes = { version = "1.4.0", features = ["serde"], optional = true }
uuid = { version = "1.4.0", features = ["v4", "serde"], optional = true }
tokio-stream = { version = "0.1.14", optional = true }
tonic = { version = "0.10.2", features = ["tls", "tls-roots", "tls-webpki-roots"], optional = true}
tonic-web = { version = "0.10.2" , optional = true }
tower-http = { version = "0.4.4", features = ["trace", "set-header", "util"], optional = true }
http = { version = "0.2", optional = true }

sqlite3-parser = { path = "../vendored/sqlite3-parser", version = "0.11", optional = true }
fallible-iterator = { version = "0.3", optional = true }

libsql-replication = { path = "../libsql-replication", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async", "async_futures", "async_tokio"] }
pprof = { version = "0.12.1", features = ["criterion", "flamegraph"] }
tokio = { version = "1.29.1", features = ["full"] }
tokio-test = "0.4"
tracing-subscriber = "0.3"
tempfile = { version = "3.7.0" }

tonic-build = "0.10"
prost-build = "0.12"


[features]
default = ["core", "replication", "remote"]
core = [
  "libsql-sys",
  "dep:bitflags",
  "dep:futures"
]
parser = [
  "dep:sqlite3-parser",
  "dep:fallible-iterator"
]
replication = [
  "core",
  "parser",
  "serde",
  "dep:tower",
  "dep:hyper",
  "dep:http",
  "dep:tokio",
  "dep:anyhow",
  "dep:bincode",
  "dep:bytemuck",
  "dep:bytes",
  "dep:uuid",
  "dep:tokio-stream",
  "dep:parking_lot",
  "dep:tokio",
  "dep:tonic",
  "dep:tonic-web",
  "dep:tower-http",
  "dep:tower",
  "dep:hyper-rustls",
  "dep:futures",
  "dep:libsql-replication"
]
hrana = [
  "parser",
  "serde",
  "dep:base64",
  "dep:serde_json",
]
serde = ["dep:serde"]
remote = [
  "core",
  "hrana",
  "dep:tower",
  "dep:hyper",
  "dep:http",
  "dep:tokio",
  "dep:futures",
  "dep:bitflags",
  "dep:tower",
  "dep:hyper-rustls",
]
wasm = ["hrana"]
cloudflare = [
  "wasm",
  "dep:worker"
]

[[bench]]
name = "benchmark"
harness = false


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
