[package]
name = "rusqlite"
version = "0.13.0"
authors = ["John Gallagher <jgallagher@bignerdranch.com>"]
description = "Ergonomic wrapper for SQLite"
repository = "https://github.com/jgallagher/rusqlite"
documentation = "http://docs.rs/rusqlite/"
readme = "README.md"
keywords = ["sqlite", "database", "ffi"]
license = "MIT"
categories = ["database"]

[badges]
travis-ci = { repository = "jgallagher/rusqlite" }
appveyor = { repository = "jgallagher/rusqlite" }

[lib]
name = "rusqlite"

[features]
load_extension = []
backup = ["libsqlite3-sys/min_sqlite_version_3_6_11"]
blob = ["libsqlite3-sys/min_sqlite_version_3_7_4"]
functions = ["libsqlite3-sys/min_sqlite_version_3_7_3"]
trace = ["libsqlite3-sys/min_sqlite_version_3_6_23"]
bundled = ["libsqlite3-sys/bundled"]
buildtime_bindgen = ["libsqlite3-sys/buildtime_bindgen"]
limits = []
hooks = []
sqlcipher = ["libsqlite3-sys/sqlcipher"]

[dependencies]
time = "0.1.0"
bitflags = "1.0"
lru-cache = "0.1"
chrono = { version = "0.4", optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
tempdir = "0.3"
lazy_static = "0.2"
regex = "0.2"

[dependencies.libsqlite3-sys]
path = "libsqlite3-sys"
version = "0.9"

[[test]]
name = "config_log"
harness = false

[[test]]
name = "deny_single_threaded_sqlite_config"

[package.metadata.docs.rs]
features = [ "backup", "blob", "chrono", "functions", "limits", "load_extension", "serde_json", "trace" ]
all-features = false
no-default-features = true
default-target = "x86_64-unknown-linux-gnu"
