[package]
name = "sqld-libsql-bindings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
mvfs = { git = "https://github.com/psarna/mvsqlite", branch = "mwal", optional = true }
mwal = { git = "https://github.com/psarna/mvsqlite", branch = "mwal", optional = true }
rusqlite = { version = "0.28.0", git = "https://github.com/psarna/rusqlite", rev = "cba0667f23949312f122f4e05", default-features = false, features = [
    "buildtime_bindgen",
    "bundled-libsql-wasm",
    "column_decltype"
] }
tracing = "0.1.37"

[features]
mwal_backend = ["mvfs", "mwal"]
unix-excl-vfs = []
