[package]
name = "sqld-libsql-bindings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
rusqlite = { version = "0.29.0", git = "https://github.com/psarna/rusqlite", rev = "f4fbb1a17b7387", default-features = false, features = [
    "buildtime_bindgen",
    "bundled-libsql-wasm-experimental",
    "column_decltype"
] }
parking_lot = "0.12.1"
tracing = "0.1.37"
once_cell = "1.17.1"

[features]
unix-excl-vfs = []
