[package]
name = "sqld"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
async-lock = "2.6.0"
async-trait = "0.1.58"
base64 = "0.21.0"
bincode = "1.3.3"
bottomless = { version = "0", path = "../bottomless", features = ["libsql_linked_statically"] }
byteorder = "1.4.3"
bytes = { version = "1.2.1", features = ["serde"] }
clap = { version = "4.0.23", features = [ "derive", "env"] }
crossbeam = "0.8.2"
fallible-iterator = "0.2.0"
futures = "0.3.25"
hex = "0.4.3"
hyper = { version = "0.14.23", features = ["http2"] }
itertools = "0.10.5"
jsonwebtoken = "8.2.0"
once_cell = "1.17.0"
parking_lot = "0.12.1"
pgwire = "0.7.0"
pin-project-lite = "0.2.9"
postgres-protocol = "0.6.4"
prost = "0.11.3"
regex = "1.7.0"
rusqlite = { git = "https://github.com/psarna/rusqlite", rev = "4df75df0b0f5ecea2714a8b21bf9f2a0fcfd5905", default-features = false, features = [
    "buildtime_bindgen",
    "bundled-libsql",
    "column_decltype"
] }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.91"
smallvec = "1.10.0"
sqld-libsql-bindings = { version = "0", path = "../sqld-libsql-bindings" }
sqlite3-parser = { git = "https://github.com/gwenn/lemon-rs.git", rev = "be6d0a96c4424fada2e068b51c25d1fdc9f983f4", default-features = false, features = [
    "YYNOERRORRECOVERY"
] }
thiserror = "1.0.38"
tokio = { version = "1.21.2", features = ["full"] }
tokio-stream = "0.1.11"
tokio-tungstenite = "0.17.2"
tokio-util = "0.7.4"
tonic = { version = "0.8.3", features = ["tls"] }
tower = { version = "0.4.13", features = ["make"] }
tower-http = { version = "0.3.5", features = ["compression-full", "cors"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = { version = "1.3", features = ["v4"] }

[dev-dependencies]
proptest = "1.0.0"
rand = "0.8.5"
tempfile = "3.3.0"
insta = { version = "1.26.0", features = ["json"] }

[build-dependencies]
prost-build = "0.11.4"
tonic-build = "0.8.4"
vergen = "6"

[features]
mwal_backend = ["sqld-libsql-bindings/mwal_backend"]
