[package]
name = "libsql"
version = "0.1.11"
edition = "2021"
description = "libSQL library: the main gateway for interacting with the database"
repository = "https://github.com/libsql/libsql"
license = "MIT"

[dependencies]
futures = "0.3.28"
libsql-sys = { version = "0.2.13", path = "../libsql-sys", optional = true }
thiserror = "1.0.40"
libsql_replication = { version = "0.0.5", path = "../replication", optional = true }
tokio = { version = "1.29.1", features = ["macros"] }
tracing-subscriber = "0.3.17"
tracing = "0.1.37"
parking_lot = "0.12.1"
hrana-client-proto = "0.2"
hyper = "0.14"
hyper-rustls = { version = "0.24", features = ["rustls-native-certs"] }
base64 = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
crossbeam-channel = "0.5"
bincode = { version = "1", optional = true }
bitflags = "2.4.0"

[dev-dependencies]
arbitrary = { version = "1.3.0", features = ["derive_arbitrary"] }
criterion = { version = "0.5", features = ["html_reports", "async", "async_futures", "async_tokio"] }
pprof = { version = "0.12.1", features = ["criterion", "flamegraph"] }
tempfile = "3.7.0"
tokio = { version = "1.29.1", features = ["full"] }
tokio-test = "0.4"

[features]
default = ["core", "replication"]
core = ["libsql-sys"]
replication = ["dep:libsql_replication", "dep:bincode"]

[[bench]]
name = "benchmark"
harness = false
