[package]
name = "libsql"
version = "0.1.11"
edition = "2021"
description = "libSQL library: the main gateway for interacting with the database"
repository = "https://github.com/libsql/libsql"
license = "MIT"

[dependencies]
futures = "0.3.28"
libsql-sys = { version = "0.2.13", path = "../libsql-sys", optional = true }
thiserror = "1.0.40"
# libsql_replication = { version = "0.0.5", path = "../replication", optional = true }
tokio = { version = "1.29.1", features = ["macros", "fs", "sync"] }
tracing-subscriber = "0.3.17"
tracing = "0.1.37"
parking_lot = "0.12.1"
hrana-client-proto = "0.2"
hyper = "0.14"
hyper-rustls = { version = "0.24", features = ["rustls-native-certs"] }
base64 = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
crossbeam-channel = "0.5"
bitflags = "2.4.0"
tower = "0.4"

bincode = { version = "1", optional = true }
anyhow = "1.0.71"
bytemuck = { version = "1.13.1", features = ["derive"] }
bytes = { version = "1.4.0", features = ["serde"] }
uuid = { version = "1.4.0", features = ["v4", "serde"] }
tempfile = "3.6.0"
memmap = "0.7.0"
crossbeam = "0.8.2"
once_cell = "1.18.0"
nix = "0.26.2"
tokio-stream = "0.1.14"
regex = "1.9.0"
tonic = { version = "0.10", features = ["tls", "tls-roots", "tls-webpki-roots"] }
tonic-web = "0.10" 
tower-http = { version = "0.4.4", features = ["trace", "util"] }
prost = "0.12"
http = "0.2"


[dev-dependencies]
arbitrary = { version = "1.3.0", features = ["derive_arbitrary"] }
criterion = { version = "0.5", features = ["html_reports", "async", "async_futures", "async_tokio"] }
pprof = { version = "0.12.1", features = ["criterion", "flamegraph"] }
tempfile = "3.7.0"
tokio = { version = "1.29.1", features = ["full"] }
tokio-test = "0.4"

tonic-build = "0.10"
prost-build = "0.12"


[features]
default = ["core", "replication"]
core = ["libsql-sys"]
replication = ["dep:bincode"]

[[bench]]
name = "benchmark"
harness = false
