[package]
name = "libsql"
version = "0.1.11"
edition = "2021"
description = "libSQL library: the main gateway for interacting with the database"
repository = "https://github.com/libsql/libsql"
license = "MIT"

[dependencies]
futures = "0.3.28"
libsql-sys = { version = "0.2.13", path = "../libsql-sys", optional = true }
thiserror = "1.0.40"
# libsql_replication = { version = "0.0.5", path = "../replication", optional = true }
tokio = { version = "1.29.1", features = ["macros", "fs", "sync"] }
tracing-subscriber = "0.3.17"
tracing = "0.1.37"
parking_lot = "0.12.1"
hrana-client-proto = "0.2"
hyper = "0.14"
hyper-rustls = { version = "0.24", features = ["rustls-native-certs"] }
base64 = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
crossbeam-channel = "0.5"
bitflags = "2.4.0"
tower = { version = "0.4", features = ["util"] }

bincode = { version = "1", optional = true }
anyhow = { version = "1.0.71", optional = true }
bytemuck = { version = "1.13.1", features = ["derive"], optional = true }
bytes = { version = "1.4.0", features = ["serde"], optional = true }
uuid = { version = "1.4.0", features = ["v4", "serde"], optional = true }
tempfile = { version = "3.6.0", optional = true }
memmap = { version = "0.7.0", optional = true }
crossbeam = { version = "0.8.2", optional = true }
once_cell = { version = "1.18.0", optional = true }
nix = { version = "0.26.2", optional = true }
tokio-stream = { version = "0.1.14", optional = true }
regex = { version = "1.9.0", optional = true }
tonic = { version = "0.10", features = ["tls", "tls-roots", "tls-webpki-roots"], optional = true}
tonic-web = { version = "0.10" , optional = true }
tower-http = { version = "0.4.4", features = ["trace", "util"], optional = true }
prost = { version = "0.12", optional = true }
http = { version = "0.2", optional = true }

sqlite3-parser = { version = "0.11" }
fallible-iterator = { version = "0.3" }


[dev-dependencies]
arbitrary = { version = "1.3.0", features = ["derive_arbitrary"] }
criterion = { version = "0.5", features = ["html_reports", "async", "async_futures", "async_tokio"] }
pprof = { version = "0.12.1", features = ["criterion", "flamegraph"] }
tempfile = "3.7.0"
tokio = { version = "1.29.1", features = ["full"] }
tokio-test = "0.4"

tonic-build = "0.10"
prost-build = "0.12"


[features]
default = ["core", "replication"]
core = ["libsql-sys"]
replication = [
  "dep:bincode",
  "dep:anyhow",
  "dep:bytemuck",
  "dep:bytes",
  "dep:bytes",
  "dep:uuid",
  "dep:tempfile",
  "dep:memmap",
  "dep:crossbeam",
  "dep:once_cell",
  "dep:nix",
  "dep:tokio-stream",
  "dep:regex",
  "dep:tonic",
  "dep:tonic-web",
  "dep:tower-http",
  "dep:prost",
  "dep:http"
]

[[bench]]
name = "benchmark"
harness = false
