[package]
name = "libsql_replication"
version = "0.0.2"
edition = "2021"
description = "Replication support for libsql"
repository = "https://github.com/libsql/libsql"
license = "MIT"

[dependencies]
tokio = { version = "1.22.2", default-features=false, features = ["fs", "sync"] }
anyhow = "1.0.71"
futures = "0.3.28"
bytemuck = { version = "1.13.1", features = ["derive"] }
bytes = { version = "1.4.0", features = ["serde"] }
thiserror = "1.0.41"
libsql-sys = { version = "0", path = "../libsql-sys" }
uuid = { version = "1.4.0", features = ["v4", "serde"] }
parking_lot = "0.12.1"
tempfile = "3.6.0"
memmap = "0.7.0"
tracing = "0.1.37"
crossbeam = "0.8.2"
once_cell = "1.18.0"
nix = "0.26.2"
tokio-stream = "0.1.14"
regex = "1.9.0"
serde_json = "1.0.103"
serde = { version = "1.0.173", features = ["serde_derive"] }
tonic = { version = "0.9", features = ["tls", "tls-roots", "tls-webpki-roots"] }
tonic-web = "0.9" 
prost = "0.11"
hyper = "0.14"
hyper-rustls = { version = "0.24", features = ["webpki-roots"] }
http = "0.2"
tower = "0.4"

[dev-dependencies]
tonic-build = "0.9"
prost-build = "0.11"
