[package]
name = "bottomless"
version = "0.1.16"
edition = "2021"
license = "MIT"
keywords = ["libsql", "sqlite", "s3", "wal", "replication"]
repository = "https://github.com/libsql/bottomless"
description = "Bottomless replication for libSQL"

[dependencies]
anyhow = "1.0.66"
async-compression = { version = "0.3.15", features = ["tokio", "gzip"] }
aws-config = { version = "0.52.0" }
aws-sdk-s3 = { version = "0.22.0" }
bytes = "1"
crc = "3.0.0"
futures = { version = "0.3.25" }
tokio = { version = "1.22.0", features = ["full"] }
tracing = "0.1.37"
uuid = { version = "1.2.2", features = ["v7"] }

[features]
libsql_linked_statically = []

[lib]
crate-type = ["rlib", "staticlib"]
